
SATA controllers can now have CD/DVD media attachments.

Support for Chipset option on Motherboard tab in VM settings.

Snapshots with no children can be deleted while VM is running.

Improved snapshot name generation.

Snapshot ages are now periodically updated when viewing the
Snapshots tab.

Snapshot dates are now displayed instead of age if for snapshots
taken more than 30 days ago.

-------------------------------------
	4-2 - 2011-1-14
-------------------------------------
Viewing a VM's screen shot in a new window while running now
prints a descriptive error rather than displaying a blank
screen if the Oracle VM Extension Pack is not installed.

Re-enabled console tab in IE. Disabling it in the first place
was because of a HUGE oversight on my part :) Which leads to
the next feature.

Console tab now displays a message if the Adobe Flash plugin is
not installed.

Host network card and drive list is now properly refreshed when
refreshing host info via the Machine -> Refresh menu item.

Added MAC Address to Guest Network Adapters dialog.

Default RDP port when creating a VM is now 3389-4000. Allowing
for a range of ports.

Fixed VM creation bug that created all VMs with an Unknown OS
type and name set to the specified OS type.

Fixed VM creation bug that would incorrectly display 'None' as
the hard drive after creation until the newly created VM was
refreshed.

Tuned down PHP error reporting to keep Notices from being
displayed when PHP's default error reporting is set too high
in user's PHP config.

Fixed bug that would not display a list of internal networks
in VM network settings.

Network settings are now (somewhat) changable while a VM is
running. This mimics the same functionality as the VirtualBox
GUI.

Shared folder settings are now changable while a VM is
running.

Added VirtualBox guest additions installation feature.

Added 'Add VM' feature.

Fixed issue where VM disks were created in the VirtualBox